--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <img class="hero" src="images/digital-marketing-meeting.jpg" alt="Digital marketing meeting">
     <div class="content">
         <div class="search-engine-optimization">
             <img src="images/search-engine-optimization.jpg" class="float-left" />
